Change AI_MODEL from Claude to Qwen-Max

--- a/.env.local
+++ b/.env.local
@@ -5,7 +5,7 @@
 AI_PROVIDER= openai
 
 # AI_MODEL: The model ID for your chosen provider (REQUIRED)
-AI_MODEL=global.anthropic.claude-sonnet-4-5-20250929-v1:0
+AI_MODEL=qwen-max
 
 # AWS Bedrock Configuration
 # AWS_REGION=us-east-1
